<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherCloset</string>
    <string name="hello_world">Hello world!</string>
<<<<<<< HEAD
    <string name="action_settings">Settings</string>
    <string name="city">city</string>
    <string name="outer">아우터</string>
    <string name="top">상의</string>
    <string name="bottoms">하의</string>
    <string name="onepiece">원피스</string>
    <string name="accessory">악세사리</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="title_activity_signup">새 계정</string>
    <string name="title_activity_posting">공유하기</string>
    <string name="title_activity_output1">Output1Activity</string>
    <string name="title_activity_timeline">WeatherCloset</string>
    <string name="title_activity_error">오류</string>
    <string name="title_activity_custom_list">CustomList</string>
    <string name="timelineTab">타임라인</string>
    <string name="statisticsTab">통계</string>
    <string name="newPostBtn">New</string>
    <string name="myPageBtn">MyPage</string>
    <string name="homeBtn">Home</string>
    <string name="noticeBtn">Notice</string>
    <string name="settingBtn">Settings</string>
    <string name="a">a</string>
    <string name="nickname">weather</string>
   
	    
=======
    
    <string name="timelineTab">타임라인</string>
    <string name="statisticsTab">통계</string>
    
    <string name="newPostBtn">New</string>
    <string name="myPageBtn">MyPage</string>
    <string name="homeBtn">Home</string>
	<string name="noticeBtn">Notice</string>
	<string name="settingBtn">Settings</string>
	<string name="a">a</string>
	<string name="nickname">weather</string>
>>>>>>> 희찬
</resources>
