<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weathercloset.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/abc_ic_clear" />

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/weatherA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="적당해요" />

            <RadioButton
                android:id="@+id/weatherH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="더워요" />

            <RadioButton
                android:id="@+id/weatherC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="추워요" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="설명 추가" >
    </EditText>

    <Spinner
        android:id="@+id/s_city"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:prompt="@string/city" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="오늘은 무엇을 입으셨나요?"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/s_outer"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/outer" />

        <Spinner
            android:id="@+id/s_top"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/top" />

        <Spinner
            android:id="@+id/s_bottoms"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/bottoms" />

        <Spinner
            android:id="@+id/s_onepiece"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/onepiece" />

        <Spinner
            android:id="@+id/s_acc"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:prompt="@string/accessory" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload" />
    </LinearLayout>

</LinearLayout>